# xue_hua_media_info

./: CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: xue_hua_media_info.podspec
lib/: xue_hua_media_info.dart
lib/src/: xue_hua_media_info.dart
lib/src/extensions/: metadata_extensions.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: parser.dart  parser_async.dart  reader.dart  reader_async.dart  types.dart  types.freezed.dart
linux/: CMakeLists.txt
macos/: xue_hua_media_info.podspec
rust/: Cargo.toml
rust/src/: convert.rs  embedded_video.rs  frb_generated.rs  lib.rs
rust/src/api/: frb_handler.rs  mod.rs  parser.rs  parser_async.rs  reader.rs  reader_async.rs  types.rs
test/: metadata_extensions_test.dart
windows/: CMakeLists.txt
(+2 files in other folders)
