[package]
name = "xue_hua_media_info"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
nom-exif = { version = "3.6.1", features = ["tokio-fs"] }
tokio = { version = "1.52.3", features = ["fs", "io-util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
